[package]
authors = ["curry <VanishingDante@gmail.com>"]
edition = "2018"
name = "tp-rs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.10.0-alpha"
num_cpus = "1.13.0"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
